add konten masih fail

--- a/src/app/akademik/ijazah/ijazah.component.html
+++ b/src/app/akademik/ijazah/ijazah.component.html
@@ -1,3 +1,17 @@
-<p>
-  ijazah works!
-</p>
+<pre>
+1. 	Q	:	Apa yang dimaksud dengan ijazah?
+	A	:	Surat tanda bukti sudah lulus.
+
+2. 	Q	:	Kapan ijazah diberikan?
+	A	:	saat pelaksanaan wisuda dan disertai transkrip.
+
+3. 	Q	:	Bagaimana bila Ijazah saya hilang?
+	A	:	Mengajukan surat keterangan kehilangan di kepolisian, Membawa surat keterangan dari kepolisian tersebut dan
+			fotokopi ijazah ke BIAK. Ijazah akan diterbitkan kembali versi DUPLICATE. Bukan asli, karena yang asli hanya sekali di cetak / di keluarkan.
+
+4. 	Q	:	Apa yang dimaksud dengan nomor ijazah?
+	A	:	Nomer seri uniq yang ada pada ijazah. sebagai pembeda dan penanda Ijazah.
+
+5. 	Q	:	Bagaimana mekanisme legalisir ijazah?
+	A	:	Ke fakultas masing-masing, membawa ijazah asli dan fotocopy Ijazah.
+</pre>
