--- a/src/app/akademik/regristrasi/regristrasi.component.html
+++ b/src/app/akademik/regristrasi/regristrasi.component.html
@@ -1,3 +1,20 @@
-<p>
-  regristrasi works!
-</p>
+<pre>
+1. 	Q	:	Apa langkah awal untuk melakukan registrasi?
+	A	:	melakukan pendaftaran dan menyelesaikan administrasi keuangan.
+
+2. 	Q	:	Kapan registrasi dilakukan?
+	A	:	sesuai dengan jadwal gelombang pendaftaran yang sedang berlaku
+
+3. 	Q	:	Di Bank mana saya dapat membayar?
+	A	:	Bank JATENG Cabang pembantu UDINUS Gedung G lantai 1.
+
+4. 	Q	:	Apa yang harus saya cantumkan saat melakukan pembayaran pendaftaran mahasiswa baru?
+	A	:	Anda tidak perlu mencantumkan apapun, hanya perlu melakukan pendaftaran melalui sistem kami yang akan di pandu
+			oleh petugas pendaftaran mahasiswa baru.
+
+5. 	Q	:	Setelah membayar di Bank apa yang harus saya lakukan?
+	A	:	Registrasi.
+
+6. 	Q	:	Jika saya masih kesulitan dengan registrasi, apa yang harus saya lakukan?
+	A	:	hubungi petugas registrasi.
+</pre>
