--- a/src/app/akademik/transkrip/transkrip.component.html
+++ b/src/app/akademik/transkrip/transkrip.component.html
@@ -1,3 +1,16 @@
-<p>
-  transkrip works!
-</p>
+<pre>
+1. 	Q	:	Dimana Mahasiswa dapat melihat transkrip?
+	A	:	Di SiAdin atau di TU.
+
+2. 	Q	:	Bagaimana Cara mengambil transkrip?
+	A	:	meminta surat permohonan ambil transkrip di TU, dan menyerahkan fotocopy ATM.
+
+3. 	Q	:	Dimana Saya dapat mengambil transkrip?
+	A	:	Di TU Fakultas.
+
+4. 	Q	:	Apabila nilai mata kuliah Saya dari Dosen B akan tetapi di dalam transkrip tertulis C, mengapa bisa begitu?
+	A	:	Menghubungi Dosen yang bersangkutan.
+
+5. 	Q	:	Bagaimana mekanisme menghapus nilai / mata kuliah pada transkrip?
+	A	:	Hubungi kepala program studi untuk melakukan konsultasi terlebih dahulu.
+</pre>
