--- a/src/app/akademik/wisuda/wisuda.component.html
+++ b/src/app/akademik/wisuda/wisuda.component.html
@@ -1,3 +1,5 @@
-<p>
-  wisuda works!
-</p>
+<pre>
+1. 	Q	:	Dimana Saya dapat memperoleh informasi dan mendaftar wisuda?
+	A	:	www.dinus.ac.id/wisuda.
+
+</pre>
