--- a/src/app/career-center/info-lowongan/info-lowongan.component.html
+++ b/src/app/career-center/info-lowongan/info-lowongan.component.html
@@ -1,3 +1,4 @@
-<p>
-  info-lowongan works!
-</p>
+<pre>
+1. 	Q	:	dimana saya bisa mendapatkan informasi lowongan pekerjaan?
+	A	:	dapat membuka di website cc.dinus.ac.id
+</pre>
