--- a/src/app/hospitality/call-center/call-center.component.html
+++ b/src/app/hospitality/call-center/call-center.component.html
@@ -1,3 +1,10 @@
-<p>
-  call-center works!
-</p>
+<pre>
+1. 	Q	:	Call Center Udinus?
+	A	:	024.3517261?
+
+2. 	Q	:	jika ingin menghubungi biro umum, berapa nomor yang harus dihubungi?
+	A	:	(024)3569684.
+
+3. 	Q	:	apakah orangtua mahasiswa bisa menghubungi call senter?.
+	A	:	bisa
+</pre>
