--- a/src/app/kemahasiswaan/mawapres/mawapres.component.html
+++ b/src/app/kemahasiswaan/mawapres/mawapres.component.html
@@ -1,3 +1,26 @@
-<p>
-  mawapres works!
-</p>
+<pre>
+1. 	Q	:	Apa itu Mawapres?
+	A	:	Mawapres adalah singkatan dari Mahasiswa Berprestasi, baik berprestasi di Akademik ataupun berprestasi dibidang
+			organisasi serta kegiatan lain yang menunjang.
+
+2. 	Q	:	Apa syarat mengikuti Mawapres?
+	A	:	- Mahasiswa aktif min semester 5
+			- Membuat karya tulis sesuai dengan tema yang akan diperlombakan
+			- Mengumpulkan bukti sertifikat seluruh kegiatan yang diikuti
+			- Mendaftarkan diri ke Fakultas masing-masing
+
+3. 	Q	:	Kapan mulai pendaftaran Mawapres?
+	A	:	Sekitar bulan November.
+
+4. 	Q	:	Dimana kita bisa mendapatkan informasi lebih lanjut tentang Mawapres?
+	A	:	- Papan Pengumuman 
+			- Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts)
+			- Dapat diliat dari web Bima di http://bima.dinus.ac.id/
+
+5. 	Q	:	Apa manfaatnya mengikuti Mawapres?
+	A	:	Menumbuhkan rasa berkompetisi, mempunyai banyak teman, mempunyai pengalaman baru.
+
+6. 	Q	:	Ada berapa tahap seleksi Mawapres?
+	A	:	Ada 6 yaitu Seleksi Administrasi oleh Fak. Seleksi Presentasi Fak. Yang dinyatakan Layak oleh Fak
+			masing-masing, akan dikirim ke universitas untuk mengikuti lomba Mawapres Tingkat Univ. Jika masuk kedalam 3 Besar kandidat Mawapres Utama tingkat Univ, akan di seleksi lagi untuk mengetahui mana yang layak di kirim ke tingkat Kopertis. Di tingkat Kopertis, akan dipertandingkan oleh Univ lain. Jika masuk 3 besar tingkat Kopertis, akan dikirim ke Tingkat Nasional.
+</pre>
