--- a/src/app/keuangan/status-pembayaran/status-pembayaran.component.html
+++ b/src/app/keuangan/status-pembayaran/status-pembayaran.component.html
@@ -1,3 +1,16 @@
-<p>
-  status-pembayaran works!
-</p>
+<pre>
+1. 	Q	:	Dimana saya bisa melihat status pembayaran?
+	A	:	Di Siadin Mahasiswa.
+
+2. 	Q	:	apakah ada keringanan biaya uang gedung untuk jalur PMDK?
+	A	:	ada, sebesar 25%.
+
+3. 	Q	:	apa syarat untuk membayar wisuda?
+	A	:	sudah masuk di data yudisium.
+
+4. 	Q	:	bagaimana jika mahasiswa sudah membayar uang SPP, tetapi di dalam data tidak terdaftar?
+	A	:	Konfirmasi ke BIRO Keuangan.
+
+5. 	Q	:	bagaimana jika mahasiswa ingin mengetahui informasi pembayaran uang gedung?
+	A	:	Menghubungi biro keuangan, atau akses admisi dinus.ac.id/pmbonline
+</pre>
