--- a/src/app/keuangan/tagihan/tagihan.component.html
+++ b/src/app/keuangan/tagihan/tagihan.component.html
@@ -1,3 +1,22 @@
-<p>
-  tagihan works!
-</p>
+<pre>
+1. 	Q	:	Dimana saya bisa melihat jumlah tagihan yang ada?
+	A	:	Di Siadin Mahasiswa, melalui surat tagihan yang sudah di kirim, atau melalui Biro Keuangan (BIKU).
+
+2. 	Q	:	Berapa biaya per SKS?
+	A	:	Rp 80.000,- Rp 90.000,- Rp. 100.000,- (Tergantung Angkatan masuk).
+
+3. 	Q	:	Dimana mahasiswa bisa mengetahui tagihan SKS?
+	A	:	Di SiAdin masing-masing, di menu akademik - informasi keuangan.
+
+4. 	Q	:	Apakah struk tagihan bulanan di kirim ke rumah?
+	A	:	Iya.
+
+5. 	Q	:	Bagaimana jika saya terlambat untuk membayar SKS?
+	A	:	Tidak boleh ikut ujian.
+
+6. 	Q	:	Dimana saya bisa mengambil struk tagihan SPP?
+	A	:	di Biro Keuangan.
+
+7. 	Q	:	Jika ada mahasiswa yang cuti , apakah masih menanggung tagihan bulanan?
+	A	:	tidak, hanya SPP saja.
+</pre>
