--- a/src/app/parkir/kehilangan/kehilangan.component.html
+++ b/src/app/parkir/kehilangan/kehilangan.component.html
@@ -1,3 +1,5 @@
-<p>
-  kehilangan works!
-</p>
+<pre>
+1. 	Q	:	Bagaimana jika terjadi kendaraan motor / mobil hilang?
+	A	:	Udinus tidak bertanggung jawab atas kehilangan kendaraan secara materi. Akan tetapi Udinus dapat membantu
+			mencari pelaku dengan rekaman CCTV.
+</pre>
