--- a/src/app/percetakan/lokasi-percetakan/lokasi-percetakan.component.html
+++ b/src/app/percetakan/lokasi-percetakan/lokasi-percetakan.component.html
@@ -1,3 +1,5 @@
-<p>
-  lokasi-percetakan works!
-</p>
+<pre>
+1. 	Q	:	Dimana saya harus mengambil modul?
+	A	:	Sebagian besar modul diambil di percetakan. lokasinya ada disebelah barat gedung B dan sebelah utara masjid
+			baitull muttaqien.
+</pre>
