--- a/src/app/percetakan/modul-kuliah/modul-kuliah.component.html
+++ b/src/app/percetakan/modul-kuliah/modul-kuliah.component.html
@@ -1,3 +1,8 @@
 <p>
-  modul-kuliah works!
+1. 	Q	:	Dimana saya bisa mengambil modul kuliah?
+	A	:	Di percetakan Udinus.
+
+2. 	Q	:	Apakah wajib mendapatkan dan membayar modul, jika matakuliah yang bermodul tersebut statusnya U (ulang)?
+	A	:	Ya, Wajib. karena tidak ada yang menjamin bahwa modul yang didapatkan pada saat pertama kali mendapatkan modul /
+			pertama kali kuliah mata kuliah tersebut, modulnya masih tersimpan.
 </p>
