--- a/src/app/perpustakaan/letak-perpustakaan/letak-perpustakaan.component.html
+++ b/src/app/perpustakaan/letak-perpustakaan/letak-perpustakaan.component.html
@@ -1,3 +1,4 @@
-<p>
-  letak-perpustakaan works!
-</p>
+<pre>
+1. 	Q	:	Dimana letak perpustakaan Universitas Dian Nuswantoro?
+	A	:	Perpustakaan terletak di Gedung A lantai 2, tangga menuju perpustakaan ada di dekat Biro Akademik (BIAK).
+</pre>
