--- a/src/app/perpustakaan/prosedur-pinjam/prosedur-pinjam.component.html
+++ b/src/app/perpustakaan/prosedur-pinjam/prosedur-pinjam.component.html
@@ -1,3 +1,4 @@
-<p>
-  prosedur-pinjam works!
-</p>
+<pre>
+1. 	Q	:	Bagaimana proses pengenbalian buku di perpustakaan?
+	A	:	Menyerahkan buku dan kartu anggota kepada petugas untuk menghapus data peminjaman di sistem.
+</pre>
