--- a/src/app/semester-reguler/absensi/absensi.component.html
+++ b/src/app/semester-reguler/absensi/absensi.component.html
@@ -1,3 +1,7 @@
-<p>
-  absensi works!
-</p>
+<pre>
+1. 	Q	:	Bagaimana proses Absensi pada perkuliahan reguler?
+	A	:	Absensi dilakukan secara manual yakni dengan menandatangani daftar hadir saat perkuliahan berlangsung.
+
+2. 	Q	:	Apa yang harus kita lakukan jika data absensi di SiAdin tidak sesuai?
+	A	:	Hubungi TU Fakultas.
+</pre>
