--- a/src/app/semester-reguler/ujian-tengah-dan-akhir-semester/ujian-tengah-dan-akhir-semester.component.html
+++ b/src/app/semester-reguler/ujian-tengah-dan-akhir-semester/ujian-tengah-dan-akhir-semester.component.html
@@ -1,3 +1,19 @@
-<p>
-  ujian-tengah-dan-akhir-semester works!
-</p>
+<pre>
+1. 	Q	:	Kapan ujian tengah semester dan akhir semester di laksanakan?
+	A	:	UTS dilaksanakan saat tengah semester sedangkan UAS dilaksanan saat akhir semester.
+
+2. 	Q	:	Apa saja syarat untuk mengikuti ujian tengah dan akhir semester?
+	A	:	Menyelesaikan administrasi keuangan dan Prosentase kehadiran minimal 75%.
+
+3. 	Q	:	Dimana kita bisa mendapatkan kartu ujian?
+	A	:	Di SiAdin, Tepatnya pada menu akademik mahasiswa.
+
+4. 	Q	:	Apa saja syarat-syarat pada saat proses ujian tengah dan akhir semester dimulai?
+	A	:	Membawa kartu ujian, KTM, memakai baju berkerah dan bersepatu.
+
+5. 	Q	:	Apakah ada ujian susulan?
+	A	:	Ketersediaan ujian susulan sesuai dengan kebijakan masing - masing dosen.
+
+6. 	Q	:	Kapan Ujian Praktek dilaksanakan?
+	A	:	Waktu Ujian Praktek ditentukan oleh masing - masing dosen.
+</pre>
