--- a/src/app/si-adin/login/login.component.html
+++ b/src/app/si-adin/login/login.component.html
@@ -1,3 +1,8 @@
-<p>
-  login works!
-</p>
+<pre>
+1. 	Q	:	Bagaimana cara mahasiswa login ke siAdin v2012?
+	A	:	Mahasiswa dapat login SiAdin v2012 dengan menggunakan email mahasiswa yang telah disediakan oleh PSI-Udinus.
+
+2. 	Q	:	Bagaimana format email mahasiswa yang digunakan untuk login SiAdin v2012?
+	A	:	Format email mahasiswa adalah nim@mhs.dinus.ac.id , tanpa titik dan huruf depan diganti dengan angkat (A = 1, B
+			= 2, C = 3, D = 4, E = 5). contohnya adalah : A11.2012.04012 --> 111201204012@mhs.dinus.ac.id
+</pre>
