--- a/src/app/wisuda/hal-hal-penting/hal-hal-penting.component.html
+++ b/src/app/wisuda/hal-hal-penting/hal-hal-penting.component.html
@@ -1,3 +1,17 @@
-<p>
-  hal-hal-penting works!
-</p>
+<pre>
+1. 	Q	:	Dimana saya harus membayar administrasi wisuda?
+	A	:	Di Bank JATENG Cab. Udinus Semarang a/n Universitas Dian Nuswantoro No Rek: 1.099.00001.3 _____ gedung G lantai
+			1 dan wajib dikonfirmasikan ke biro keuangan
+
+2. 	Q	:	Dimana Saya dapat mengambil undangan wisuda?
+	A	:	Biro Akademik gedung A lantai 1.
+
+3. 	Q	:	Berapa kali wisuda dilaksanakan dalam setahun?
+	A	:	2.
+
+4. 	Q	:	Dimana wisuda biasanya dilaksanakan?
+	A	:	Di Patra Semarang Convention Hotel.
+
+5. 	Q	:	Dimana Saya bisa mendapatkan formulir pendaftaran wisuda?
+	A	:	dinus.ac.id/wisuda
+</pre>
