--- a/src/app/wisuda/mekanisme-wisuda/mekanisme-wisuda.component.html
+++ b/src/app/wisuda/mekanisme-wisuda/mekanisme-wisuda.component.html
@@ -1,3 +1,17 @@
-<p>
-  mekanisme-wisuda works!
-</p>
+<pre>
+1. 	Q	:	Dimana Saya harus mendaftar wisuda?
+	A	:	Dinus.ac.id/wisuda
+
+2. 	Q	:	Bagaimana mekanisme mengikuti Wisuda?
+	A	:	- Terdaftar di Yudisium
+			- Melihat pengumuman (tanggal-tanggal penting, syarat-syarat penting lainnya)
+			- Mendaftar di Web wisuda (http://dinus.ac.id/wisuda), hanya yang terdata di daftar yudisium. Isian wajib lengkap
+			- Melakukan foto diri dengan aturan yang telah ditentukan karena foto tsb digunakan untuk ijazah dan katalog wisuda
+			- Mengikuti gladi bersih
+			- Mengikuti acara wisuda yang telah ditentukan dengan berdandan yang rapi dan bersih
+
+3. 	Q	:	Bagaimana mekanisme untuk terdaftar di daftar Yudisium?
+	A	:	- Telah selesai ujian Skripsi
+			- Tidak ada nilai E dan nilai Kosong serta nilai D sebanyak 3 mata kuliah pada transkrip akhir dengan total sks yang telah ditentukan
+			- Dikeluarkan oleh fakultas yang ditandatangi Dekan
+</pre>
