--- a/src/app/wisuda/tanggal-pelaksanaan/tanggal-pelaksanaan.component.html
+++ b/src/app/wisuda/tanggal-pelaksanaan/tanggal-pelaksanaan.component.html
@@ -1,3 +1,4 @@
-<p>
-  tanggal-pelaksanaan works!
-</p>
+<pre>
+1. 	Q	:	Kapan pendaftaran wisuda di buka?
+	A	:	Lihat di web wisuda http://dinus.ac.id/wisuda
+</pre>
