--- a/src/app/akademik/aktifasi/aktifasi.component.html
+++ b/src/app/akademik/aktifasi/aktifasi.component.html
@@ -1,3 +1,24 @@
-<p>
-  aktifasi works!
-</p>
+<pre>
+1. 	Q	:	Kemana saya harus mengurus masalah aktifasi siadin mahasiswa, jika seandainya terjadi masalah dengan siadin
+			saya?
+	A	:	ke bagian tata usaha Udinus.
+
+2. 	Q	:	Bagaimana mMekanisme Reset Password atau dan Aktifasi Siadin melalui TU?
+	A	:	Pada saat TU akan melakukan reset password, TU berhak dan wajib menanyakan nama lengkap, nama orang tua, nomor
+			telpon, HP, email, tanggal lahir yang bersangkutan dan tanggal lahir orang tua.
+
+3. 	Q	:	Kenapa Saya tidak berhasil login SiAdin, akan tetapi Saya suda memasukkan password dengan benar ?
+	A	:	Beberapa kemungkinan : format NIM salah, atau NIM tidak ditemukan, atau salah password, atau Status akademik
+			sudah berubah ke status Lulus, atau anda salah memasukkan password anda, bila lupa password sebaiknya reset password anda ke TU.
+
+4. 	Q	:	Dimana Saya bisa mendapatkan informasi aktifasi SiAdin?
+	A	:	BIAK, TU Fakultas masing-masing, PSI.
+
+5. 	Q	:	Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?
+	A	:	Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua
+			secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.
+
+6. 	Q	:	Bagaimana merubah status akademik dari Mangkir berganti menjadi Aktif?
+	A	:	Silakan mengajukan permohonan aktif dengan membuat surat permohonan ditujukan ke Wakil Rektor I dan akan
+			diteruskan ke Biro Akademik (BIAK). Dan tidak boleh lupa WAJIB menyelesaikan administratif keuangan terlebih dahulu.
+</pre>
