--- a/src/app/akademik/heregristrasi/heregristrasi.component.html
+++ b/src/app/akademik/heregristrasi/heregristrasi.component.html
@@ -1,3 +1,24 @@
-<p>
-  heregristrasi works!
-</p>
+<pre>
+1. 	Q	:	Apa yang dimaksud dengan Heregristrasi?
+	A	:	Pendaftaran ulang bagi mahasiswa yang akan kuliah lagi dengan mengupdate data mahasiswa.
+
+2. 	Q	:	Apa beda dari Heregristrasi dengan Registrasi ?
+	A	:	Herregistrasi merupakan pendaftaran ulang bagi mahasiswa Udinus yang ingin melanjutkan perkuliahan di semester
+			baru dengan mengupdate data mahasiswa, Sedangkan registrasi adalah pendaftaran yang ditujukan untuk mahasiswa baru yang ingin mengikuti perkuliahan di Udinus sehingga datanya akan tersimpan oleh sistem.
+
+3. 	Q	:	Kapan herregristrasi dilaksanakan?
+	A	:	Setiap awal semester sebelum perkuliahan dimulai.
+
+4. 	Q	:	Kemana Saya harus mengurus herregristrasi?
+	A	:	ke BIAK.
+
+5. 	Q	:	Apa saja persyaratan herregristrasi?
+	A	:	Melakukan pendaftaran ulang dan menyelesaikan administrasi keuangan.
+
+6. 	Q	:	Dimana pembayaran dapat dilakukan?
+	A	:	Bank Jateng, BRI dan Bank Mandiri.
+
+7. 	Q	:	Bagaimana cara membayar dan apa saja yang harus Saya lakukan?
+	A	:	Setelah melakukan pembayaran pada Bank diatas, Anda akan menerima slip/resi. Fotocopy slip/resi tersebut
+			kemudian tuliskan NIM dan Nama anda lalu serahkan ke BIKU.
+</pre>
