--- a/src/app/hospitality/sms-center/sms-center.component.html
+++ b/src/app/hospitality/sms-center/sms-center.component.html
@@ -1,3 +1,10 @@
-<p>
-  sms-center works!
-</p>
+<pre>
+1. 	Q	:	apakah orangtua mahasiswa juga bisa mengakses SMS Senter?
+	A	:	bisa, di nomor 081325634567.
+
+2. 	Q	:	jika nomor yang digunakan mahasiswa untuk sms itu baru , apakah harus mendaftarkan kembali?
+	A	:	tidak.
+
+3. 	Q	:	apa manfaat SMS Senter untuk mahasiswa?
+	A	:	bisa menyampaikan keluhan, syarat dan kritik.
+</pre>
