--- a/src/app/semester-pendek/pendaftaran-sp/pendaftaran-sp.component.html
+++ b/src/app/semester-pendek/pendaftaran-sp/pendaftaran-sp.component.html
@@ -1,3 +1,4 @@
-<p>
-  pendaftaran-sp works!
-</p>
+<pre>
+1. 	Q	:	Dimana saya dapat mendaftar Semester Pendek?
+	A	:	Pada SiAdin masing - masing, Tepatnya pada menu Akademik Mahasiswa.
+</pre>
