--- a/src/app/semester-pendek/proses-krs/proses-krs.component.html
+++ b/src/app/semester-pendek/proses-krs/proses-krs.component.html
@@ -1,3 +1,17 @@
-<p>
-  proses-krs works!
-</p>
+<pre>
+1. 	Q	:	Bolehkah semester 3 mengikuti sp?
+	A	:	Boleh.
+
+2. 	Q	:	Apa syarat dari mata kuliah yang bisa diambil di Semester Pendek?
+	A	:	Mata kuliah yang sudah pernah diambil sebelumnya di perkuliahan, minimal bernilai C, & peminat memenuhi kuota
+			kelas.
+
+3. 	Q	:	Apakah mata kuliah yang BELUM pernah diambil, bisa di-SP?
+	A	:	Tidak, mata kuliah yang bisa di-SP adalah mata kuliah yang pernah diambil sebelumnya
+
+4. 	Q	:	Berapa total SKS atau mata kuliah yang bisa diambil sewaktu input KRS SP?
+	A	:	10 SKS atau 4 mata kuliah.
+
+5. 	Q	:	Dimana saya bisa melihat nama dosen wali saya?
+	A	:	Di siadin.
+</pre>
