--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-2 col-sm-2 col-md-2 blablabla">
   <ul class="nav nav-sidebar">
-    <li class=""><a routerLink="/">Home <span class="sr-only">(current)</span></a></li>
-    <li><a data-toggle="collapse" href="#akademik">Akademik</a></li>
+    <li class="active"><a routerLink="/">FAQ <span class="sr-only">(current)</span></a></li>
+    <li class="active"><a data-toggle="collapse" href="#akademik">Akademik  <span class="sr-only">(current)</span></a></li>
     <div id="akademik" class="panel-collapse collapse out ">
       <ul>
         <li><a routerLink="/akademik/aktifasi">Aktifasi</a></li>
@@ -17,21 +17,21 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#alumni">Alumni</a></li>
+    <li class="active"><a data-toggle="collapse" href="#alumni">Alumni  <span class="sr-only">(current)</span></a></li>
     <div id="alumni" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/alumni/tracing-alumni">Tracing Alumni</a></li>
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#career-center">Career Center</a></li>
+    <li class="active"><a data-toggle="collapse" href="#career-center">Career Center <span class="sr-only">(current)</span></a></li>
     <div id="career-center" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/career-center/info-lowongan" >Info Lowongan</a></li>
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#hospitality">Hospotality</a></li>
+    <li class="active"><a data-toggle="collapse" href="#hospitality">Hospotality  <span class="sr-only">(current)</span></a></li>
     <div id="hospitality" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/hospitality/call-center">Call Center</a></li>
@@ -40,7 +40,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan</a></li>
+    <li class="active"><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan  <span class="sr-only">(current)</span></a></li>
     <div id="kemahasiswaan" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/kemahasiswaan/beasiswa">Beasiswa</a></li>
@@ -52,7 +52,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#kepegawaian">Kepegawaian</a></li>
+    <li class="active"><a data-toggle="collapse" href="#kepegawaian">Kepegawaian  <span class="sr-only">(current)</span></a></li>
     <div id="kepegawaian" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/kepegawaian/beban-kinerja-dosen">Beban Kinerja Dosen</a></li>
@@ -62,7 +62,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#keuangan">Keuangan</a></li>
+    <li class="active"><a data-toggle="collapse" href="#keuangan">Keuangan <span class="sr-only">(current)</span></a></li>
     <div id="keuangan" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/keuangan/rekening-pembayaran">Rekening Pembayaran</a></li>
@@ -71,7 +71,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#laboratorium">Laboratorium</a></li>
+    <li class="active"><a data-toggle="collapse" href="#laboratorium">Laboratorium  <span class="sr-only">(current)</span></a></li>
     <div id="laboratorium" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/laboratorium/jenis-dan-kegiatan">Jenis dan Kategori</a></li>
@@ -79,14 +79,14 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik</a></li>
+    <li class="active"><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik  <span class="sr-only">(current)</span></a></li>
     <div id="layanan-poliklinik" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="/layanan-poliklinik/layanan-poliklinik">Layanan Poliklinik</a></li>
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#parkir">Parkir</a></li>
+    <li class="active"><a data-toggle="collapse" href="#parkir">Parkir <span class="sr-only">(current)</span></a></li>
     <div id="parkir" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="parkir/kehilangan">Kehilangan</a></li>
@@ -95,7 +95,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian</a></li>
+    <li class="active"><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian <span class="sr-only">(current)</span></a></li>
     <div id="penelitian-dan-pengabdian" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="penelitian-dan-pengabdian/penelitian">Penelitian</a></li>
@@ -104,7 +104,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik</a></li>
+    <li class="active"><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik <span class="sr-only">(current)</span></a></li>
     <div id="pengumuman-akademik" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="pengumuman-akademik/berita">Berita</a></li>
@@ -112,7 +112,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#percetakan">Percetakan</a></li>
+    <li class="active"><a data-toggle="collapse" href="#percetakan">Percetakan <span class="sr-only">(current)</span></a></li>
     <div id="percetakan" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="percetakan/lokasi-percetakan">Lokasi Percetakan</a></li>
@@ -120,7 +120,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#perpustakaan">Perpustakaan</a></li>
+    <li class="active"><a data-toggle="collapse" href="#perpustakaan">Perpustakaan <span class="sr-only">(current)</span></a></li>
     <div id="perpustakaan" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="perpustakaan/buku-text">Buku Text</a></li>
@@ -133,7 +133,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#semester-pendek">Semester Pendek</a></li>
+    <li class="active"><a data-toggle="collapse" href="#semester-pendek">Semester Pendek <span class="sr-only">(current)</span></a></li>
     <div id="semester-pendek" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="semester-pendek/absensi">Absensi</a></li>
@@ -144,7 +144,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#semester-reguler">Semester Reguler</a></li>
+    <li class="active"><a data-toggle="collapse" href="#semester-reguler">Semester Reguler <span class="sr-only">(current)</span></a></li>
     <div id="semester-reguler" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="semester-reguler/absensi">Absensi</a></li>
@@ -154,7 +154,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#siadin">SiAdin</a></li>
+    <li class="active"><a data-toggle="collapse" href="#siadin">SiAdin <span class="sr-only">(current)</span></a></li>
     <div id="siadin" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="si-adin/e-mail">E-mail</a></li>
@@ -164,7 +164,7 @@
       </ul>
     </div>
 
-    <li><a data-toggle="collapse" href="#wisuda">Wisuda</a></li>
+    <li class="active"><a data-toggle="collapse" href="#wisuda">Wisuda <span class="sr-only">(current)</span></a></li>
     <div id="wisuda" class="panel-collapse collapse out">
       <ul>
         <li><a routerLink="wisuda/hal-hal-penting">Hal-hal penting</a></li>
