--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,8 +1,22 @@
 ul {
-  list-style-type:  square;
+  list-style-type: inherit;
   list-style-position: outside;
+
 }
 
 .blablabla {
   margin-right: 20px;
 }
+
+.sublist {
+  background-color: #ffffff;
+  padding: 7px 0px;
+}
+
+/*.list-group-item{
+  background-color: #428bca;
+}
+
+.list-group-item:hover{
+  background-color: #57a3e3;
+}*/
