--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row mid">
     <div class="col-sm-1 col-md-1"></div>
     <app-sidebar></app-sidebar>
-    <div class="col-xs-8 col-sm-8 col-md-8 main jumbotron">
+    <div style="background-color:#ffffff; box-sizing: border-box" class="col-xs-8 col-sm-8 col-md-8 main jumbotron" >
       <router-outlet></router-outlet>
     </div>
     <div class="col-md-1"></div>
