--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="col-xs-2 col-sm-2 col-md-2 blablabla">
   <ul class="nav nav-sidebar">
-    <li class="active"><a routerLink="/">FAQ <span class="sr-only">(current)</span></a></li>
-    <li class="active"><a data-toggle="collapse" href="#akademik">Akademik  <span class="sr-only">(current)</span></a></li>
-    <div id="akademik" class="panel-collapse collapse out ">
+    <li class="active list-group-item" style="background-color:#428bca;"><a routerLink="/">FAQ</a></li>
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#akademik">Akademik  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="akademik" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/akademik/aktifasi">Aktifasi</a></li>
         <li><a routerLink="/akademik/heregristrasi">Heregritasi</a></li>
@@ -17,22 +17,22 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#alumni">Alumni  <span class="sr-only">(current)</span></a></li>
-    <div id="alumni" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#alumni">Alumni <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="alumni" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/alumni/tracing-alumni">Tracing Alumni</a></li>
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#career-center">Career Center <span class="sr-only">(current)</span></a></li>
-    <div id="career-center" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#career-center">Career Center<i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="career-center" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/career-center/info-lowongan" >Info Lowongan</a></li>
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#hospitality">Hospotality  <span class="sr-only">(current)</span></a></li>
-    <div id="hospitality" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#hospitality">Hospotality  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="hospitality" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/hospitality/call-center">Call Center</a></li>
         <li><a routerLink="/hospitality/online-yahoo">Online Yahoo</a></li>
@@ -40,8 +40,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan  <span class="sr-only">(current)</span></a></li>
-    <div id="kemahasiswaan" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="kemahasiswaan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/kemahasiswaan/beasiswa">Beasiswa</a></li>
         <li><a routerLink="/kemahasiswaan/komunitas">Komunitas</a></li>
@@ -52,8 +52,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#kepegawaian">Kepegawaian  <span class="sr-only">(current)</span></a></li>
-    <div id="kepegawaian" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#kepegawaian">Kepegawaian <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="kepegawaian" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/kepegawaian/beban-kinerja-dosen">Beban Kinerja Dosen</a></li>
         <li><a routerLink="/kepegawaian/informasi-dosen">Informasi Dosen</a></li>
@@ -62,8 +62,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#keuangan">Keuangan <span class="sr-only">(current)</span></a></li>
-    <div id="keuangan" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#keuangan">Keuangan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="keuangan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/keuangan/rekening-pembayaran">Rekening Pembayaran</a></li>
         <li><a routerLink="/keuangan/status-pembayaran">Status Pembayaran</a></li>
@@ -71,23 +71,23 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#laboratorium">Laboratorium  <span class="sr-only">(current)</span></a></li>
-    <div id="laboratorium" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#laboratorium">Laboratorium  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="laboratorium" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/laboratorium/jenis-dan-kegiatan">Jenis dan Kategori</a></li>
         <li><a routerLink="/laboratorium/letak-laboratorium">Letak Laboratorium</a></li>
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik  <span class="sr-only">(current)</span></a></li>
-    <div id="layanan-poliklinik" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="layanan-poliklinik" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/layanan-poliklinik/layanan-poliklinik">Layanan Poliklinik</a></li>
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#parkir">Parkir <span class="sr-only">(current)</span></a></li>
-    <div id="parkir" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#parkir">Parkir <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="parkir" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="parkir/kehilangan">Kehilangan</a></li>
         <li><a routerLink="parkir/keluar-masuk">Keluar Masuk</a></li>
@@ -95,8 +95,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian <span class="sr-only">(current)</span></a></li>
-    <div id="penelitian-dan-pengabdian" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca; font-size:12px;"><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="penelitian-dan-pengabdian" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="penelitian-dan-pengabdian/penelitian">Penelitian</a></li>
         <li><a routerLink="penelitian-dan-pengabdian/pengabdian">Pengabdian</a></li>
@@ -104,24 +104,24 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik <span class="sr-only">(current)</span></a></li>
-    <div id="pengumuman-akademik" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca; font-size:12px;"><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="pengumuman-akademik" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="pengumuman-akademik/berita">Berita</a></li>
         <li><a routerLink="pengumuman-akademik/internal">Internal</a></li>
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#percetakan">Percetakan <span class="sr-only">(current)</span></a></li>
-    <div id="percetakan" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#percetakan">Percetakan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="percetakan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="percetakan/lokasi-percetakan">Lokasi Percetakan</a></li>
         <li><a routerLink="percetakan/modul-kuliah">Modul Kuliah</a></li>
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#perpustakaan">Perpustakaan <span class="sr-only">(current)</span></a></li>
-    <div id="perpustakaan" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#perpustakaan">Perpustakaan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="perpustakaan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="perpustakaan/buku-text">Buku Text</a></li>
         <li><a routerLink="perpustakaan/e-book">e-Book</a></li>
@@ -133,8 +133,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#semester-pendek">Semester Pendek <span class="sr-only">(current)</span></a></li>
-    <div id="semester-pendek" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#semester-pendek">Semester Pendek <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="semester-pendek" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="semester-pendek/absensi">Absensi</a></li>
         <li><a routerLink="semester-pendek/pendaftaran-sp">Pendaftaran SP</a></li>
@@ -144,8 +144,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#semester-reguler">Semester Reguler <span class="sr-only">(current)</span></a></li>
-    <div id="semester-reguler" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#semester-reguler">Semester Reguler <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="semester-reguler" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="semester-reguler/absensi">Absensi</a></li>
         <li><a routerLink="semester-reguler/pendaftaran-semester-pendek">Pendaftaran Semester Pendek</a></li>
@@ -154,8 +154,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#siadin">SiAdin <span class="sr-only">(current)</span></a></li>
-    <div id="siadin" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#siadin">SiAdin <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="siadin" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="si-adin/e-mail">E-mail</a></li>
         <li><a routerLink="si-adin/jenis-dan-kategori">Jenis & Kategori</a></li>
@@ -164,8 +164,8 @@
       </ul>
     </div>
 
-    <li class="active"><a data-toggle="collapse" href="#wisuda">Wisuda <span class="sr-only">(current)</span></a></li>
-    <div id="wisuda" class="panel-collapse collapse out">
+    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#wisuda">Wisuda <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <div id="wisuda" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="wisuda/hal-hal-penting">Hal-hal penting</a></li>
         <li><a routerLink="wisuda/mekanisme-wisuda">Mekanisme Wisuda</a></li>
@@ -173,6 +173,6 @@
         <li><a routerLink="wisuda/tanggal-pelaksanaan">Tanggal Pelaksanaan</a></li>
       </ul>
     </div>
-    <li class="active"><a routerLink="/ask-a-question">Ask A Question ! <span class="sr-only">(current)</span></a></li>
+    <li class="active list-group-item" style="background-color:#428bca;"><a routerLink="/ask-a-question">Ask A Question ! </a></li>
   </ul>
 </div>
