--- a/src/app/ask-a-question/ask-a-question.component.html
+++ b/src/app/ask-a-question/ask-a-question.component.html
@@ -25,7 +25,7 @@
       <label class="col-sm-2 control-label">Kategori</label>
       <div class="col-sm-10">
         <select class="form-control">
-          <option><option>
+          <option>Pilih Kategori<option>
           <option>Akademik</option>
           <option>Alumni</option>
           <option>Career Center</option>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-sm-2 control-label">Pertanyaan : (Jumlah karakter yang akan dibaca oleh sistem maksimal 70)</label>
+      <label class="col-sm-2 control-label">Pertanyaan : (maks. 70 karakter)</label>
       <div class="col-sm-10">
         <textarea class="form-control" rows="3"></textarea><hr>
       </div>
